bean填充属性